datahub-help/base/stasis-reactor-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dh-docs-server
  name: stasis-reactor
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: dh-docs-server
    deploymentconfig: stasis-reactor
