datahub-help/base/stasis-reactor-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: dh-docs-server
  name: stasis-reactor
spec:
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: stasis-reactor
    weight: 100
